# tauri-nssplitview

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  bacon.toml  flake.nix  package-lock.json  package.json
examples/basic-splitview/: README.md  index.html
examples/basic-splitview/src-tauri/: Cargo.toml  tauri.conf.json
examples/basic-splitview/src-tauri/src/: main.rs
src/: builder.rs  common.rs  event.rs  lib.rs  splitview.rs
