[workspace]
members = [
  ".",
]
exclude = [
  "examples/basic-splitview",
]

[package]
name = "tauri-splitview"
version = "0.1.0"
authors = ["vanalite"]
description = "A Tauri plugin for creating native macOS split views using NSSplitView"
edition = "2021"
rust-version = "1.75"
exclude = ["/examples"]

[dependencies]
tauri = { version = "2.8.5", features = ["macos-private-api"] }
pastey = "0.1"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

[features]
cargo-clippy = []

[workspace.dependencies]
tauri = "2.8.5"
tauri-build = "2.4.1"
