[workspace]
members = [
  ".",
]
exclude = [
  "examples/basic-splitview",
]

[package]
name = "tauri-nssplitview"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["vanalite"]
repository = "https://github.com/Vanalite/tauri-nssplitview"
description = "A wrapper plugin for Tauri to build MacOS app with NSSplitView"
keywords = ["macos", "rust", "objective-c", "tauri", "tauri-plugin"]
categories = ["gui"]
readme = "README.md"
rust-version = "1.75"
exclude = ["/examples"]

[dependencies]
tauri = { version = "2.8.5", features = ["macos-private-api"] }
tauri-plugin = "2"
pastey = "0.1"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

[features]
cargo-clippy = []

[lib]
name = "tauri_nssplitview"
path = "src/lib.rs"

[workspace.dependencies]
tauri = "2.8.5"
tauri-build = "2.4.1"
