[workspace]

[package]
name = "basic-splitview-example"
version = "0.1.0"
description = "A basic split view example"
authors = ["vanalite"]
edition = "2021"

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-nssplitview = { path = "../../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
